src/main/java/me/salmonmoses/hlef/HlefParser.java
// Generated from F:/Labs/HLEF/src/main/resources/antlr\Hlef.g4 by ANTLR 4.9.2
package me.salmonmoses.hlef;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HlefParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, THEN=2, END=3, ELSE=4, ELIF=5, TRUE=6, FALSE=7, EMPTY=8, AND=9, 
		OR=10, NOT=11, ERROR=12, CELL_ID=13, ID=14, NUMBER=15, STRING=16, SHEET_ID=17, 
		WS=18, COMMENT=19, DOLLAR=20, AT=21, COLON=22, LPAREN=23, RPAREN=24, ASSIGN=25, 
		EQUAL=26, NOT_EQUAL=27, PLUS=28, MINUS=29, STAR=30, SLASH=31, GREATER_EQUAL=32, 
		LESS_EQUAL=33, GREATER=34, LESS=35, COMMA=36, EXCLAMATION_POINT=37;
	public static final int
		RULE_argName = 0, RULE_macroUseName = 1, RULE_argUse = 2, RULE_rangeLiteral = 3, 
		RULE_grouping = 4, RULE_primary = 5, RULE_macroUse = 6, RULE_call = 7, 
		RULE_functionArguments = 8, RULE_unary = 9, RULE_factor = 10, RULE_term = 11, 
		RULE_comparison = 12, RULE_equality = 13, RULE_logicAnd = 14, RULE_logicOr = 15, 
		RULE_errorHandler = 16, RULE_argumentsDecl = 17, RULE_decl = 18, RULE_block = 19, 
		RULE_ifExpr = 20, RULE_expr = 21, RULE_formula = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"argName", "macroUseName", "argUse", "rangeLiteral", "grouping", "primary", 
			"macroUse", "call", "functionArguments", "unary", "factor", "term", "comparison", 
			"equality", "logicAnd", "logicOr", "errorHandler", "argumentsDecl", "decl", 
			"block", "ifExpr", "expr", "formula"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'end'", "'else'", "'elif'", "'true'", "'false'", 
			"'empty'", "'and'", "'or'", "'not'", "'error'", null, null, null, null, 
			null, null, null, "'$'", "'@'", "':'", "'('", "')'", "':='", "'='", "'<>'", 
			"'+'", "'-'", "'*'", "'/'", "'>='", "'<='", "'>'", "'<'", "','", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "THEN", "END", "ELSE", "ELIF", "TRUE", "FALSE", "EMPTY", 
			"AND", "OR", "NOT", "ERROR", "CELL_ID", "ID", "NUMBER", "STRING", "SHEET_ID", 
			"WS", "COMMENT", "DOLLAR", "AT", "COLON", "LPAREN", "RPAREN", "ASSIGN", 
			"EQUAL", "NOT_EQUAL", "PLUS", "MINUS", "STAR", "SLASH", "GREATER_EQUAL", 
			"LESS_EQUAL", "GREATER", "LESS", "COMMA", "EXCLAMATION_POINT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hlef.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HlefParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ArgNameContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(HlefParser.DOLLAR, 0); }
		public TerminalNode ID() { return getToken(HlefParser.ID, 0); }
		public ArgNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterArgName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitArgName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitArgName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgNameContext argName() throws RecognitionException {
		ArgNameContext _localctx = new ArgNameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_argName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(DOLLAR);
			setState(47);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroUseNameContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(HlefParser.AT, 0); }
		public TerminalNode ID() { return getToken(HlefParser.ID, 0); }
		public MacroUseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroUseName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterMacroUseName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitMacroUseName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitMacroUseName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroUseNameContext macroUseName() throws RecognitionException {
		MacroUseNameContext _localctx = new MacroUseNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_macroUseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(AT);
			setState(50);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgUseContext extends ParserRuleContext {
		public ArgNameContext argName() {
			return getRuleContext(ArgNameContext.class,0);
		}
		public ArgUseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argUse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterArgUse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitArgUse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitArgUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgUseContext argUse() throws RecognitionException {
		ArgUseContext _localctx = new ArgUseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argUse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			argName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RangeLiteralContext extends ParserRuleContext {
		public List<TerminalNode> CELL_ID() { return getTokens(HlefParser.CELL_ID); }
		public TerminalNode CELL_ID(int i) {
			return getToken(HlefParser.CELL_ID, i);
		}
		public TerminalNode SHEET_ID() { return getToken(HlefParser.SHEET_ID, 0); }
		public TerminalNode EXCLAMATION_POINT() { return getToken(HlefParser.EXCLAMATION_POINT, 0); }
		public TerminalNode COLON() { return getToken(HlefParser.COLON, 0); }
		public RangeLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeLiteral; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterRangeLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitRangeLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitRangeLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RangeLiteralContext rangeLiteral() throws RecognitionException {
		RangeLiteralContext _localctx = new RangeLiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rangeLiteral);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SHEET_ID) {
				{
				setState(54);
				match(SHEET_ID);
				setState(55);
				match(EXCLAMATION_POINT);
				}
			}

			setState(58);
			match(CELL_ID);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(59);
				match(COLON);
				setState(60);
				match(CELL_ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupingContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(HlefParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(HlefParser.RPAREN, 0); }
		public GroupingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grouping; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterGrouping(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitGrouping(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitGrouping(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupingContext grouping() throws RecognitionException {
		GroupingContext _localctx = new GroupingContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_grouping);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(63);
			match(LPAREN);
			setState(64);
			expr();
			setState(65);
			match(RPAREN);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(HlefParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(HlefParser.FALSE, 0); }
		public TerminalNode NUMBER() { return getToken(HlefParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(HlefParser.STRING, 0); }
		public RangeLiteralContext rangeLiteral() {
			return getRuleContext(RangeLiteralContext.class,0);
		}
		public GroupingContext grouping() {
			return getRuleContext(GroupingContext.class,0);
		}
		public ArgUseContext argUse() {
			return getRuleContext(ArgUseContext.class,0);
		}
		public TerminalNode EMPTY() { return getToken(HlefParser.EMPTY, 0); }
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitPrimary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitPrimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primary);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(TRUE);
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(FALSE);
				}
				break;
			case NUMBER:
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				match(NUMBER);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(STRING);
				}
				break;
			case CELL_ID:
			case SHEET_ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				rangeLiteral();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				grouping();
				}
				break;
			case DOLLAR:
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				argUse();
				}
				break;
			case EMPTY:
				enterOuterAlt(_localctx, 8);
				{
				setState(74);
				match(EMPTY);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroUseContext extends ParserRuleContext {
		public FunctionArgumentsContext args;
		public MacroUseNameContext macroUseName() {
			return getRuleContext(MacroUseNameContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(HlefParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HlefParser.RPAREN, 0); }
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public MacroUseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macroUse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterMacroUse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitMacroUse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitMacroUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroUseContext macroUse() throws RecognitionException {
		MacroUseContext _localctx = new MacroUseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_macroUse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			macroUseName();
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(78);
				match(LPAREN);
				setState(79);
				((MacroUseContext)_localctx).args = functionArguments();
				setState(80);
				match(RPAREN);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public FunctionArgumentsContext args;
		public TerminalNode ID() { return getToken(HlefParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(HlefParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(HlefParser.RPAREN, 0); }
		public FunctionArgumentsContext functionArguments() {
			return getRuleContext(FunctionArgumentsContext.class,0);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(85);
			match(LPAREN);
			setState(86);
			((CallContext)_localctx).args = functionArguments();
			setState(87);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionArgumentsContext extends ParserRuleContext {
		public ExprContext expr;
		public List<ExprContext> args = new ArrayList<ExprContext>();
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HlefParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HlefParser.COMMA, i);
		}
		public FunctionArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionArguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterFunctionArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitFunctionArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitFunctionArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionArgumentsContext functionArguments() throws RecognitionException {
		FunctionArgumentsContext _localctx = new FunctionArgumentsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionArguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << EMPTY) | (1L << NOT) | (1L << CELL_ID) | (1L << ID) | (1L << NUMBER) | (1L << STRING) | (1L << SHEET_ID) | (1L << DOLLAR) | (1L << AT) | (1L << LPAREN) | (1L << MINUS))) != 0)) {
				{
				setState(89);
				((FunctionArgumentsContext)_localctx).expr = expr();
				((FunctionArgumentsContext)_localctx).args.add(((FunctionArgumentsContext)_localctx).expr);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(90);
					match(COMMA);
					setState(91);
					((FunctionArgumentsContext)_localctx).expr = expr();
					((FunctionArgumentsContext)_localctx).args.add(((FunctionArgumentsContext)_localctx).expr);
					}
					}
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryContext extends ParserRuleContext {
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(HlefParser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(HlefParser.NOT, 0); }
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public MacroUseContext macroUse() {
			return getRuleContext(MacroUseContext.class,0);
		}
		public UnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitUnary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitUnary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryContext unary() throws RecognitionException {
		UnaryContext _localctx = new UnaryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unary);
		int _la;
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !(_la==NOT || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(100);
				unary();
				}
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				call();
				}
				break;
			case TRUE:
			case FALSE:
			case EMPTY:
			case CELL_ID:
			case NUMBER:
			case STRING:
			case SHEET_ID:
			case DOLLAR:
			case LPAREN:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				primary();
				}
				break;
			case AT:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				macroUse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public UnaryContext left;
		public Token SLASH;
		public List<Token> op = new ArrayList<Token>();
		public Token STAR;
		public Token _tset463;
		public UnaryContext unary;
		public List<UnaryContext> right = new ArrayList<UnaryContext>();
		public List<UnaryContext> unary() {
			return getRuleContexts(UnaryContext.class);
		}
		public UnaryContext unary(int i) {
			return getRuleContext(UnaryContext.class,i);
		}
		public List<TerminalNode> SLASH() { return getTokens(HlefParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(HlefParser.SLASH, i);
		}
		public List<TerminalNode> STAR() { return getTokens(HlefParser.STAR); }
		public TerminalNode STAR(int i) {
			return getToken(HlefParser.STAR, i);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_factor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((FactorContext)_localctx).left = unary();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAR || _la==SLASH) {
				{
				{
				setState(107);
				((FactorContext)_localctx)._tset463 = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==STAR || _la==SLASH) ) {
					((FactorContext)_localctx)._tset463 = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				((FactorContext)_localctx).op.add(((FactorContext)_localctx)._tset463);
				setState(108);
				((FactorContext)_localctx).unary = unary();
				((FactorContext)_localctx).right.add(((FactorContext)_localctx).unary);
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public FactorContext left;
		public Token PLUS;
		public List<Token> op = new ArrayList<Token>();
		public Token MINUS;
		public Token _tset488;
		public FactorContext factor;
		public List<FactorContext> right = new ArrayList<FactorContext>();
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(HlefParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(HlefParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(HlefParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(HlefParser.MINUS, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlefListener ) ((HlefListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlefVisitor ) return ((HlefVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}
